# dreamer-v4

./: .gitignore  CLAUDE.md  README.md  augmentation_tests.py  create_dataset.py  create_dataset.slurm  dataset.py  debug_train_dreamer_dynamics_ddp.py  debug_train_dreamer_dynamics_fsdp.py  debug_train_dreamer_fsdp.py  dynamics-play-pushT.py  dynamics_train_pushT.py  dynamics_train_single.py  environment.yml  eval_dynamics.py  eval_dynamics_jz.slurm  eval_tokenizer.py  eval_tokenizer.slurm  export_traj.py  finetune_dreamer_tokenizer_fsdp.py  go2_linux_eval_main.py  go2_train_dreamer_dynamics_ddp.py  go2_train_dreamer_tokenizer_fsdp.py  jz_test_dynamics.slurm  jz_test_tokenizer.slurm  launch_resize.sh  linux_eval_main.py  mac_eval.py  manual_wandb_sync.py  models.py  pyproject.toml  sampling.ipynb  test.slurm  test_dynamics.slurm  tests.ipynb  tokenize-dataset-dreamer.py  tokenizer_train.sbatch  tokenizer_train_fsdp.py  tokenizer_train_single.py  tokenizer_train_single.slurm  (+4 more)
clients/neuralsim/: README.md  pyproject.toml
clients/neuralsim/examples/: random_policy.py
clients/neuralsim/src/neuralsim/: __init__.py  env.py
config/: dynamics_small.old.yaml  dynamics_small.yaml  tokenizer.yaml  tokenizer_cfg1.yaml  tokenizer_cfg2.yaml  tokenizer_small.yaml
dreamerv4/: datasets.py  loss.py  sampler.py  sampling.py
model/: blocks.py  blocks.py.old  dynamics.py  dynamics.py.old  tokenizer.py  utils.py
notebooks/: dynamics.ipynb  neural_sim_demo.ipynb  sampling.ipynb  sandbox.ipynb  tests.ipynb  tokenizer_visualize.ipynb
scripts/: dynamics-play-pushT.py  play-pushT.py  (+5 more)
(+61 files in other folders)
